--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<html>
+<head>
+<meta name="google-site-verification" content="scuZ_5N5VjguXt4OWWmkFm7gpvVD3zAJH2eTwNwrYuU" />
+<title> My title </title>
+</head> 
+<body>
+page contents
+</body>
+</html>
+
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title></title><meta http-equiv="refresh" content="0;url= Site/Duy-Nguyen/Duy-Nguyen.html" /></head><body></body></html>
